Update Czech translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,7 +55,11 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Switch perl programs to use the new Dpkg/Arch module.
   * Add support for format strings in Dpkg::ErrorHandling functions.
 
+  [ Updated dselect translations ]
+  * Czech (Miroslav Kure).
+
   [ Updated dpkg translations ]
+  * Czech (Miroslav Kure).
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #446278
   * Thai added (Theppitak Karoonboonyanan). Closes: #446501
