--- a/dselect/po/cs.po
+++ b/dselect/po/cs.po
@@ -1,7 +1,7 @@
 # Czech translation for dpkg.
 #
 # Petr Cech <cech@debian.org>, 1999, 2000, 2001.
-# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006.
+# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006, 2007.
 #
 # Thanks go to:
 # Milan Zamazal <pdm@debian.org>
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2006-05-08 13:54+0200\n"
+"PO-Revision-Date: 2007-11-09 19:25+0100\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -140,9 +140,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:259
-#, fuzzy
 msgid "Keybindings"
-msgstr "funkce kláves"
+msgstr "Funkce kláves"
 
 #: dselect/baselist.cc:307
 #, c-format
@@ -301,7 +300,6 @@ msgid "Keystrokes"
 msgstr "Funkce kláves"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -333,7 +331,7 @@ msgid ""
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
 "Posuny: Následující/Předchozí, Začátek/Konec, Nahoru/Dolů, Vzad/Vpřed:\n"
-"  šipka dolů, j         šipka nahoru, k         posun zvýraznění\n"
+"  j, šipka dolů         k, šipka nahoru         posun zvýraznění\n"
 "  N, Page-down, Space   P, Page-up, Backspace   posun seznamu o 1 stránku\n"
 "  ^n                    ^p                      posun seznamu o 1 řádek\n"
 "  t, Home               e, End                  skok na začátek/konec "
@@ -689,7 +687,6 @@ msgid "Keystrokes for method selection"
 msgstr "Klávesy pro volbu metody"
 
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -714,7 +711,7 @@ msgid ""
 "  \\                repeat last search\n"
 msgstr ""
 "Posuny: Následující/Předchozí, Začátek/Konec, Nahoru/Dolů, Vzad/Vpřed:\n"
-"  n, šipka dolů         p, šipka nahoru         posun zvýraznění\n"
+"  j, šipka dolů         k, šipka nahoru         posun zvýraznění\n"
 "  N, Pg-down, mezerník  P, Pg-up, Backspace     posun seznamu o 1 stránku\n"
 "  ^n                    ^p                      posun seznamu o 1 řádek\n"
 "  t, Home               e, End                  skok na začátek/konec "
@@ -739,7 +736,7 @@ msgstr ""
 
 #: dselect/main.cc:52
 msgid "Type dselect --help for help."
-msgstr "Napište dselect --help pro získání nápovědy."
+msgstr "Pro získání nápovědy napište dselect --help."
 
 #: dselect/main.cc:135
 msgid "a"
@@ -1040,13 +1037,12 @@ msgid "[none]"
 msgstr "[none]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "popis "
+msgstr "Vysvětlení"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
-msgstr "Popis není k dispozici."
+msgstr "Vysvětlení není k dispozici."
 
 #: dselect/method.cc:64
 #, c-format
@@ -1376,7 +1372,7 @@ msgstr "před-závisí na"
 
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "poruší"
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1591,24 +1587,20 @@ msgstr ""
 "balíky v různých typech skupin."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "závislosti"
+msgstr "Vzájemné vztahy"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "popis není k dispozici."
+msgstr "Popis není k dispozici."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "informace o instalovaném balíku "
+msgstr "Stav instalace podle souboru control"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "informace o dostupných verzích"
+msgstr "Dostupné informace ze souboru control"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
