--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-09  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 285t.
+
 2007-09-19  Sunjae Park  <darehanl@gmail.com>
 
 	* ko.po: Updated to 285t.
