man/po/de.po - Spellchecked

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2007-11-02 14:01+0100\n"
-"PO-Revision-Date: 2007-11-04 08:47+0100\n"
+"PO-Revision-Date: 2007-11-10 18:06+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -227,7 +227,7 @@ msgid ""
 "heading into a single one.  It tries to be smart about cases and trailing "
 "colon/spaces."
 msgstr ""
-"B<cleanup-info> ist ein Perlskript das versucht, den Müll aufzuräumen, den "
+"B<cleanup-info> ist ein Perl-Skript das versucht, den Müll aufzuräumen, den "
 "ein schwindelhaftes B<install-info>(8) hinterlassen haben könnte. Es sammelt "
 "alle Bereiche mit der gleichen Überschrift in einen einzelnen zusammen. Es "
 "versucht, pfiffig über Groß-/Kleinschreibung und angehängte Doppelpunkte/"
@@ -395,12 +395,12 @@ msgstr "Debian"
 # type: Plain text
 #: deb.5:4
 msgid "deb - Debian binary package format"
-msgstr "deb - Debian Binärpaketformat"
+msgstr "deb - Debian-Binärpaketformat"
 
 # type: Plain text
 #: deb.5:6 deb-old.5:7
 msgid "I<filename>B<.deb>"
-msgstr "I<dateiname>B<.deb>"
+msgstr "I<Dateiname>B<.deb>"
 
 # type: Plain text
 #: deb.5:12
@@ -947,7 +947,7 @@ msgid ""
 msgstr ""
 "Liste Paketen auf, die von diesem Paket beschädigt werden, zum Beispiel in "
 "dem sie Fehler zugänglich machen, wenn sich das andere Paket auf dieses "
-"Paket verläßt. Die Paketverwaltungs-Software wird es beschädigten Paketen "
+"Paket verlässt. Die Paketverwaltungssoftware wird es beschädigten Paketen "
 "nicht erlauben, sich zu konfigurieren; im Allgemeinen wird das Problem "
 "behoben, indem ein Upgrade des im B<Breaks>-Feld aufgeführten Pakets "
 "durchgeführt wird."
@@ -1341,7 +1341,7 @@ msgstr "deb-substvars"
 # type: Plain text
 #: deb-substvars.5:5
 msgid "deb-substvars - Debian source substitution variables"
-msgstr "deb-substvars - Debian Sources Substitutionsvariablen"
+msgstr "deb-substvars - Substitutionsvariablen in Debian-Quellen"
 
 # type: TP
 #: deb-substvars.5:8
@@ -5208,7 +5208,7 @@ msgstr ""
 "referenzieren, eine Liste der möglichen Felder kann licht mittels B<-I> für "
 "das gleiche Paket ermittelt werden. Eine komplette Erläuterung der "
 "Formatieroptionen (darunter die Escape-Sequenzen und Feld-Tabulatoren) kann "
-"in der Erlklärung der Option B<--showformat> von B<dpkg-query>(1) gefunden "
+"in der Erklärung der Option B<--showformat> von B<dpkg-query>(1) gefunden "
 "werden."
 
 # type: Plain text
@@ -5221,7 +5221,7 @@ msgstr ""
 #: dpkg-deb.1:189
 #, no-wrap
 msgid "B<-z>I<compress_level>"
-msgstr "B<-z>I<komprimier_Stufe>"
+msgstr "B<-z>I<Komprimierstufe>"
 
 # type: Plain text
 #: dpkg-deb.1:193
@@ -5229,7 +5229,7 @@ msgid ""
 "Specify which compression level to pass to the compressor backend program, "
 "when building a package."
 msgstr ""
-"Gibt die Komprimierstufe an, die an das Kompremier-Backendprogramm beim Bau "
+"Gibt die Komprimierstufe an, die an das Komprimier-Backendprogramm beim Bau "
 "eines Pakets übergeben werden soll."
 
 # type: TP
@@ -5244,7 +5244,7 @@ msgid ""
 "Specify which compression type to use when building a package. Allowed "
 "values are I<gzip>, I<bzip2>, I<lzma>, and I<none> (default is I<gzip>)."
 msgstr ""
-"Gibt die Art der Kompremierung beim Bau eines Pakets an. Erlaubte Werte sind "
+"Gibt die Art der Komprimierung beim Bau eines Pakets an. Erlaubte Werte sind "
 "I<gzip>, I<bzip2>, I<lzma> und I<none> (voreingestellt ist I<gzip>)."
 
 # type: TP
@@ -5327,7 +5327,7 @@ msgid ""
 msgstr ""
 "Versuchen Sie nicht, nur mit B<dpkg-deb> Software zu installieren! Sie "
 "müssen B<dpkg> selber verwenden, um sicherzustellen, dass alle Dateien an "
-"den richtigen Ort plaziert werden, die Paketskripte ausgeführt werden und "
+"den richtigen Ort platziert werden, die Paketskripte ausgeführt werden und "
 "sein Status und Inhalt aufgezeichnet wird."
 
 # type: Plain text
@@ -5390,7 +5390,7 @@ msgstr "[B<--add>] I<Datei>"
 # type: Plain text
 #: dpkg-divert.8:28
 msgid "Add a diversion for I<file>."
-msgstr "Fügt eine Umlenkung für I<file> hinzu."
+msgstr "Fügt eine Umlenkung für I<Datei> hinzu."
 
 # type: TP
 #: dpkg-divert.8:28 dpkg-statoverride.8:35
@@ -5865,7 +5865,7 @@ msgid ""
 "The list of generated files which are part of the upload being prepared.  "
 "B<dpkg-genchanges> reads the data here when producing a B<.changes> file."
 msgstr ""
-"Die Liste der erstellten Dateien, die Teil der zum hochladen vorbereiteten "
+"Die Liste der erstellten Dateien, die Teil der zum Hochladen vorbereiteten "
 "Dateien sind. B<dpkg-genchanges> liest hier die Daten, wenn es die Datei B<."
 "changes> erstellt."
 
@@ -5917,7 +5917,7 @@ msgstr ""
 "Daher werden I<Pre-Depends>, I<Depends>, I<Recommends> und I<Suggests> in "
 "dieser Reihenfolge vereinfacht, indem Abhängigkeiten, die aufgrund der "
 "jeweils ermittelten stärkeren Abhängigkeit bereits erfüllt sind, entfernt "
-"werden. Es wird auch alle Selbstabhängigkeite entfernen (tatsächlich werden "
+"werden. Es wird auch alle Selbstabhängigkeiten entfernen (tatsächlich werden "
 "alle Abhängigkeiten entfernt, die aufgrund der installierten Version des "
 "aktuellen Pakets automatisch erfüllt werden). Logisch betrachtet behält es "
 "den Durchschnitt von mehrfachen Abhängigkeiten auf das gleiche Paket."
@@ -7977,7 +7977,7 @@ msgstr ""
 "Originalquellen zu erstellen und danach entfernt (dies ist äquivalent zu B<-"
 "sr>); falls keines von beiden gefunden wird, wird angenommen, dass das Paket "
 "kein Debianisierungs-Diff sondern nur ein direktes Quellarchiv (dies ist "
-"äquivalent zu B<-sn>). Falls sowohl ein Verzeichnis als auch eine Tardatei "
+"äquivalent zu B<-sn>). Falls sowohl ein Verzeichnis als auch eine Tar-Datei "
 "gefunden werden, dann ignoriert B<dpkg-source> das Verzeichnis, und "
 "überschreibt es, falls B<-sA> angegeben wurde (dies ist äquivalent zu B<-"
 "sP>) oder löst einen Fehler aus, falls B<-sa> angegeben wurde. B<-sA> ist "
@@ -8003,7 +8003,7 @@ msgid ""
 "the default>)."
 msgstr ""
 "Verwendet beim Extrahieren. Die Originalquellen (falls vorhanden) werden als "
-"Tardatei belassen. Falls diese sich nicht im aktuellen Verzeichnis befinden "
+"Tar-Datei belassen. Falls diese sich nicht im aktuellen Verzeichnis befinden "
 "oder falls eine existierende aber davon verschiedene Datei bereits vorhanden "
 "ist, wird sie dort hin kopiert. (B<Dies ist die Voreinstellung>)"
 
