--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-10  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Spellchecked
+
 2007-11-04  Robert Luberda  <robert@debian.org>
 
 	* po/pl.po: Update to 1221t16f108u.
