2007-11-11  Helge Kreutzmann  <debian@helgefjell.de>
        * scripts/po/de.po: Updated to 172t0f306u.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-11  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 172t0f306u.
+
 2007-11-04 Robert Luberda <robert@debian.org>
 
 	* pl.po: Updated to 478t.
