--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-04  Robert Luberda  <robert@debian.org>
+
+	* po/pl.po: Update to 1258t10f77u, fix typos
+	  in existing translations.
+
 2007-11-10  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Spellchecked
@@ -5,7 +10,7 @@
 2007-11-04  Robert Luberda  <robert@debian.org>
 
 	* po/pl.po: Update to 1221t16f108u.
-
+	
 2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1300t0f45u.
