Add initial udeb support
Support new fields fields Package-Type, Subarchitecture, Kernel-Version
and Installer-Menu-Item.
New '--type' option for dpkg-scanpackages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,10 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Add support for format strings in Dpkg::ErrorHandling functions.
   * Move build and host arch detection code from dpkg-architecture to
     Dpkg::Arch.
+  * Add initial udeb support:
+    - Support new fields fields Package-Type, Subarchitecture, Kernel-Version
+      and Installer-Menu-Item. Closes: #383916
+    - New '--type' option for dpkg-scanpackages.
 
   [ Updated dselect translations ]
   * Czech (Miroslav Kure).
