--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -13,7 +13,7 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with dpkg; if not, write to the Free Software
 .\" Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-.TH dpkg\-scanpackages 1 "2007-09-08" "Debian Project" "dpkg utilities"
+.TH dpkg\-scanpackages 1 "2007-11-19" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-scanpackages \- create Packages index files
 .
@@ -71,8 +71,11 @@ differ in architecture only the first one found is used.
 .
 .SH OPTIONS
 .TP
+.BR \-t ", " \-\-type " \fItype\fP"
+Scan for *.\fItype\fP packages, instead of *.deb.
+.TP
 .BR \-u ", " \-\-udeb
-Scan for \fI*.udeb\fP, instead of \fI*.deb\fP.
+\fBObsolete\fP alias for \fB-tudeb\fP.
 .TP
 .BR \-a ", " \-\-arch " \fIarch\fP"
 Use a pattern consisting of \fI*_all.deb\fP and \fI*_arch.deb\fP instead of
