ChangeLog police patrol

--- a/ChangeLog
+++ b/ChangeLog
@@ -123,6 +123,10 @@
 	($host_arch): Initialize with get_host_arch instead of direct call to
 	'dpkg-architecture'.
 
+2007-10-12  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Use get_host_arch from Dpkg::Arch.
+
 2007-10-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/controllib.pl ($host_arch, get_host_arch, get_valid_arches)
