--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -18,17 +18,17 @@
 
 2007-11-04  Robert Luberda  <robert@debian.org>
 
-	* po/pl.po: Update to 1258t10f77u, fix typos
-	  in existing translations.
+	* po/pl.po: Update to 1258t10f77u, fix typos in existing
+	translations.
 
 2007-11-10  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Spellchecked
+	* po/de.po: Spellchecked.
 
 2007-11-04  Robert Luberda  <robert@debian.org>
 
 	* po/pl.po: Update to 1221t16f108u.
-	
+
 2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1300t0f45u.
@@ -59,8 +59,8 @@
 
 2007-10-12  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Updated to 1280t0f63u, add lots of fixes from 
-	  Frank Lichtenheld, thanks!
+	* po/de.po: Updated to 1280t0f63u, add lots of fixes from
+	Frank Lichtenheld, thanks!
 
 2007-10-12  Frank Lichtenheld  <djpig@debian.org>
 
@@ -247,7 +247,7 @@
 
 2007-07-18  Guillem Jover  <guillem@debian.org>
 
-	* dpkg.1: Split indeendent options.
+	* dpkg.1: Split independent options.
 	* dpkg-buildpackage.1: Likewise.
 	* dpkg-genchanges.1: Likewise.
 	* dpkg-source.1: Likewise.
