--- a/debian/changelog
+++ b/debian/changelog
@@ -1,40 +1,31 @@
 dpkg (1.14.8) UNRELEASED; urgency=low
 
   [ Raphael Hertzog ]
-  * Merge dpkg-shlibdeps-buxy branch, dpkg-shlibdeps has been heavily
-    reworked:
-    * it supports "symbols" files to generate finer-grained
-      dependencies. Closes: #430367
-      Those files can be created by the new dpkg-gensymbols
-      command.
-    * it uses now all paths in RPATH (instead of only the first).
+  * Heavy rework of dpkg-shlibdeps:
+    - Support "symbols" files to generate finer-grained dependencies.
+      Those files can be created by the new dpkg-gensymbols command.
+      Closes: #430367
+    - Uses now all paths in RPATH (instead of only the first).
       Closes: #395942
-    * it's now able to parse include directives in /etc/ld.so.conf.
-      Closes: #431597
-    * libraries are also searched in the public directories of packages
+    - Support parsing include directives in /etc/ld.so.conf. Closes: #431597
+    - Libraries are also searched in the public directories of packages
       being built and thus debian/shlibs.local can effectively define
       dependencies for libraries that are being built. Closes: #80340
-    * "symbols" files use the full SONAME as key instead of splitting it in
-      (name, version) like the "shlibs" format requires it. This allows
-      binaries to be linked with unversioned libraries and not fail.
-      Closes: #48208
-      Note that unversioned libraries are still a very bad idea.
-    * dpkg-shlibdeps now supports "-x<package>" options that can be used
-      to exclude packages from generated dependencies. This is
-      particalularly useful to avoid dependencies on ourselves when a
-      package contains a binary and a library (without requiring an
-      shlibs.local file to override the usual shlibs file). It might also
-      be used to avoid other unwanted dependencies (use with care though).
+    - "symbols" files use the full SONAME as key instead of splitting it in
+      (name, version) like in the "shlibs" format. This allows binaries to
+      be linked with unversioned libraries and not fail. Note that
+      unversioned libraries are still a very bad idea.  Closes: #48208
+    - dpkg-shlibdeps now supports '-x<package>' options that can be used to
+      exclude packages from generated dependencies (use with care though).
       Closes: #41907, #109954
-    * If dpkg-shlibdeps doesn't find any dependency information for a
+    - If dpkg-shlibdeps doesn't find any dependency information for a
       shared library that is actively used, then it will fail. This can be
-      disabled with the option --ignore-missing-info. Closes: #10807
-  * Switch perl programs to use the new Dpkg/Deps module. This changes the
-    behaviour of dpkg-gencontrol which will rewrite and simplify dependencies
-    as possible.
-    Multiple dependencies on the same package are replaced by their
-    intersection. Closes: #178203, #186809, #222652
-    This applies to dependencies as well as build dependencies.
+      disabled with the option '--ignore-missing-info'. Closes: #10807
+  * Switch perl programs to use the new Dpkg::Deps module. This changes the
+    behaviour of dpkg-gencontrol and dpkg-source which will rewrite and
+    simplify dependencies and build dependencies as possible. Multiple
+    dependencies on the same package are replaced by their intersection.
+    Closes: #178203, #186809, #222652
 
   [ Frank Lichtenheld ]
   * Add $(MAKE) check to build target
@@ -47,12 +38,11 @@ dpkg (1.14.8) UNRELEASED; urgency=low
     set DEB_BUILD_OPTIONS. Found by Daniel Shepler. Closes: #446119
   * Change some ' in shell code in dpkg-source.1 and dpkg-query.1 to
     proper \(aq. Reported by Daniel van Eeden. Closes: #447476
-    
 
   [ Guillem Jover ]
   * Use shipped perl modules when calling perl programs at build time.
-  * Switch perl programs to use the new Dpkg/ErrorHandling module.
-  * Switch perl programs to use the new Dpkg/Arch module.
+  * Switch perl programs to use the new Dpkg::ErrorHandling and Dpkg::Arch
+    perl modules.
   * Add support for format strings in Dpkg::ErrorHandling functions.
   * Move build and host arch detection code from dpkg-architecture to
     Dpkg::Arch.
@@ -68,35 +58,28 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * Czech (Miroslav Kure).
 
+  [ Added dpkg translations ]
+  * Thai (Theppitak Karoonboonyanan). Closes: #446501
+
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
+  * Galician (Jacobo Tarrio). Closes: #446624
   * Polish (Robert Luberda).
   * Russian (Yuri Kozlov). Closes: #446278
-  * Thai added (Theppitak Karoonboonyanan). Closes: #446501
-  * Galician (Jacobo Tarrio). Closes: #446624
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann). Closes: #448354
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
+  [ Added scripts translations ]
+  * German (Helge Kreutzmann). Closes: #448353
+
   [ Updated scripts translations ]
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
-  * German added (Helge Kreutzmann). Closes: #448353
 
  -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:49:51 +0200
-
-dpkg (1.14.8~newshlib) experimental; urgency=low
-
-  [ Raphael Hertzog ]
-  * Snapshot of upcoming dpkg 1.14.8 with improved dpkg-shlibdeps
-    supporting symbols files.
-
-  [ Updated man pages translations ]
-  * German (Helge Kreutzmann).
-
- -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:22:57 +0200
 
 dpkg (1.14.7) unstable; urgency=low
 
