Get rid of undefined macros from man pages
Thanks to Colin Watson for the analysis.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-architecture.1: Remove unneeded formatting surrounding '-c' in
+	example command, as a side effect get rid of an undefined macro.
+	* dpkg-checkbuilddeps.1: Remove usage of .UR macro, which was
+	undefined anyway.
+	* dpkg-statoverride.8: Likewise.
+	* dpkg-query.1: Likewise. Remove .T macro cruft.
+
+2007-11-19  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-scanpackages.1: Document --type, and mark --udeb as obsolete.
 
 2007-11-04  Robert Luberda  <robert@debian.org>
