--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.8.
+
+2007-11-19  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-source.pl: Use %dep_field_type for the union option
 	to Dpkg::Deps::parse, and use capit() to normalize the field names,
 	instead of hardcoding them.
