--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.8) UNRELEASED; urgency=low
+dpkg (1.14.8) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Heavy rework of dpkg-shlibdeps:
@@ -79,7 +79,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
- -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:49:51 +0200
+ -- Guillem Jover <guillem@debian.org>  Mon, 19 Nov 2007 10:36:30 +0200
 
 dpkg (1.14.7) unstable; urgency=low
 
