--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.14.9~.
+
+2007-11-19  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.14.8.
 
 2007-11-19  Guillem Jover  <guillem@debian.org>
