--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.9) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 19 Nov 2007 10:59:18 +0200
+
 dpkg (1.14.8) unstable; urgency=low
 
   [ Raphael Hertzog ]
