--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.9) UNRELEASED; urgency=low
 
-  *
+  [ Updated man pages translations ]
+    * German (Helge Kreutzmann).
 
  -- Guillem Jover <guillem@debian.org>  Mon, 19 Nov 2007 10:59:18 +0200
 
