--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-19  Helge Kreutzmann  <debian@helgefjell.de>
+
+        * po/de.po: Updated to 1303t0f41u.
+
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
