Dpkg::Deps::parse(): handle empty fields properly instead of returning undef
And revert previous changes made to dpkg-gencontrol to skip empty fields.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,8 @@ dpkg (1.14.9) UNRELEASED; urgency=low
 
   [ Raphael Hertzog ]
   * Fix bad behaviour of Dpkg::Path::get_pkg_root_dir() and adjust
-    dpkg-shlibdeps accordingly.
-  * Fix dpkg-gencontrol to not try to parse and simplify empty fields.
+    dpkg-shlibdeps accordingly. Closes: #452012
+  * Fix Dpkg::Deps to accept empty fields. Closes: #452013
 
   [ Updated man pages translations ]
     * German (Helge Kreutzmann).
