--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,8 @@
 	problem (when a RPATH contains $ORIGIN and when the value of
 	this variable can't be determined because we don't know what
 	is the root directory of the temporary tree).
-	* scripts/dpkg-gencontrol.pl: Don't try to parse empty fields.
+	* scripts/Dpkg/Deps.pm: Fix parse() to handle empty fields instead
+	of returning undef.
 
 2007-11-19  Guillem Jover  <guillem@debian.org>
 
