--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-20  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.14.9.
+
 2007-11-19  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Path.pm: Fix behaviour of get_pkg_root_dir() when
