--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.9) UNRELEASED; urgency=low
+dpkg (1.14.9) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Fix bad behaviour of Dpkg::Path::get_pkg_root_dir() and adjust
@@ -6,9 +6,9 @@ dpkg (1.14.9) UNRELEASED; urgency=low
   * Fix Dpkg::Deps to accept empty fields. Closes: #452013
 
   [ Updated man pages translations ]
-    * German (Helge Kreutzmann).
+  * German (Helge Kreutzmann).
 
- -- Guillem Jover <guillem@debian.org>  Mon, 19 Nov 2007 10:59:18 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 20 Nov 2007 07:15:41 +0200
 
 dpkg (1.14.8) unstable; urgency=low
 
