--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.10) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 20 Nov 2007 07:27:44 +0200
+
 dpkg (1.14.9) unstable; urgency=low
 
   [ Raphael Hertzog ]
