Updated Swedish translation.
Updated Swedish translation for scripts and manual pages.
Also fixed some old changelog entries that had wrong or broken addresses listed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ dpkg (1.14.10) UNRELEASED; urgency=low
 
   *
 
+  [ Updated man pages translations ]
+  * Swedish (Peter Karlsson)
+
+  [ Added scripts translations ]
+  * Swedish (Peter Karlsson)
+
  -- Guillem Jover <guillem@debian.org>  Tue, 20 Nov 2007 07:27:44 +0200
 
 dpkg (1.14.9) unstable; urgency=low
