--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-02  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1344t.
+
 2007-11-19  Helge Kreutzmann  <debian@helgefjell.de>
 
         * po/de.po: Updated to 1303t0f41u.
@@ -37,7 +41,7 @@
 
 	* po/de.po: Updated to 1300t0f45u.
 
-2007-11-02  Peter Karlsson  <peter@softwolves.pp.>
+2007-11-02  Peter Karlsson  <peterk@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
 	* po/*.po: Merged with dpkg-man.pot.
@@ -137,7 +141,7 @@
 	* dpkg-source.1: Remove superfluous [options] from
 	-b command description.
 
-2007-09-28  Peter Karlsson  <peter@softwolves.pp.se>
+2007-09-28  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1290t.
 
