--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -953,7 +953,7 @@
 
 	* pt.po: Updated to 974t24f2u.
 
-2005-12-22  Peter Karlsson  <peter@softwolves.pp.se>
+2005-12-22  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 1000t.
 
