--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.6\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-11-20 06:56+0200\n"
-"PO-Revision-Date: 2007-10-26 10:19+0100\n"
+"PO-Revision-Date: 2007-11-20 14:22+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -933,7 +933,7 @@ msgstr "aktuell värdarkitekturen \"%s\" finns i paketets arkitekturlista (%s)"
 #: scripts/dpkg-gencontrol.pl:292
 #, perl-format
 msgid "%s package with udeb specific field %s"
-msgstr ""
+msgstr "%s-paket med udeb-specifikt fält %s"
 
 #: scripts/dpkg-gencontrol.pl:305
 msgid "fork for du"
@@ -1142,7 +1142,7 @@ msgid "cannot exec format parser: %s"
 msgstr "kan inte exekvera formattolk: %s"
 
 #: scripts/dpkg-scanpackages.pl:57
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <binarypath> [<overridefile> [<pathprefix>]] > "
 "Packages\n"
@@ -1159,7 +1159,8 @@ msgstr ""
 "Packages\n"
 "\n"
 "Flaggor:\n"
-"  -u, --udeb               sök efter udeb-paket.\n"
+"  -t, --type <typ>         sök efter <typ>-paket (standard är \"deb\").\n"
+"  -u, --udeb               sök efter udeb-paket (föråldrat alias till -tudeb).\n"
 "  -a, --arch <ark>         arkitektur att söka efter.\n"
 "  -m, --multiversion       tillåt flera versioner av samma paket.\n"
 "  -h, --help               visa detta hjälpmeddelande.\n"
@@ -1599,6 +1600,8 @@ msgid ""
 "identified due to lack of DEBIAN sub-directory in the root of package's "
 "build tree"
 msgstr ""
+"$ORIGIN används i RPATH för %s och motsvarande katalog kunde inte identifieras "
+"på grund av DEBIAN-underkatalogen saknas i roten av paketets byggträd"
 
 #: scripts/dpkg-shlibdeps.pl:470
 msgid "cannot fork for dpkg --search"
