--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-11-19 10:18+0200\n"
-"PO-Revision-Date: 2007-11-02 14:10+0100\n"
+"PO-Revision-Date: 2007-11-20 14:20+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -4102,16 +4102,13 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:251
-#, fuzzy
 msgid "CC=i386-gnu-gcc dpkg-architecture -c debian/rules build"
-msgstr ""
-"CC=i386-gnu-gcc dpkg-architecture CW<\\*(C`-c\\*(C'> debian/rules build"
+msgstr "CC=i386-gnu-gcc dpkg-architecture -c debian/rules build"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:253
-#, fuzzy
 msgid "eval \\`dpkg-architecture -u\\`"
-msgstr "eval \\`dpkg-architecture CW<\\*(C`-u\\*(C'>\\`"
+msgstr "eval \\`dpkg-architecture -u\\`"
 
 # type: Plain text
 #: ../../man/dpkg-architecture.1:256
@@ -6606,9 +6603,9 @@ msgstr "dpkg-scanpackages"
 
 # type: TH
 #: ../../man/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-11-19"
-msgstr "2007-01-24"
+msgstr "2007-11-19"
 
 # type: Plain text
 #: ../../man/dpkg-scanpackages.1:19
@@ -6699,15 +6696,14 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-scanpackages.1:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-t>, B<--type> I<type>"
-msgstr "B<-t>, B<--test>"
+msgstr "B<-t>, B<--test> I<typ>"
 
 # type: Plain text
 #: ../../man/dpkg-scanpackages.1:76
-#, fuzzy
 msgid "Scan for *.I<type> packages, instead of *.deb."
-msgstr "Sök efter I<*.udeb>, i stället för I<*.deb>."
+msgstr "Sök efter *.I<typ>-paket, i stället för *.deb."
 
 # type: TP
 #: ../../man/dpkg-scanpackages.1:76
@@ -6718,7 +6714,7 @@ msgstr "B<-u>, B<--udeb>"
 # type: Plain text
 #: ../../man/dpkg-scanpackages.1:79
 msgid "B<Obsolete> alias for B<-tudeb>."
-msgstr ""
+msgstr "B<Föråldrat> alias till B<-tudeb>."
 
 # type: TP
 #: ../../man/dpkg-scanpackages.1:79
