Dpkg::Shlibs::Objdump: fix checks in is_executable() and is_public_library()

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-21  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/Objdump.pm: Fix the checks in is_executable() and
+	is_public_library().
+
 2007-11-20  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.10~.
