Add non-regression tests for the case of empty dependency fields

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 
 	* scripts/Dpkg/Shlibs/Objdump.pm: Fix the checks in is_executable() and
 	is_public_library().
+	* scripts/t/200_Dpkg_Shlibs.t: Add some more tests to make sure
+	the above functions behave as expected.
+	* scripts/t/400_Dpkg_Deps.t: Add some more tests to make sure that
+	empty dependency fields are correctly handled.
+	* scripts/Makefile.am: Include the new data files required by the
+	tests above.
 
 2007-11-20  Guillem Jover  <guillem@debian.org>
 
