--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ dpkg (1.14.10) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * dpkg-shlibdeps now correctly identify private libraries (avoid many
     warnings with perl/python modules).
+  * Move capit() to a Dpkg::Fields module and use it in dpkg-shlibdeps.
+    Closes: #452262
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
