dpkg-name: Add support for Package-Type

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-22  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-name.sh (getname): Get the package extension from the
+	Package-Type field, or fallback to deb if not present.
+
 2007-11-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl: Add more debug messages. Accept empty
