--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ dpkg (1.14.10) UNRELEASED; urgency=low
     orig.tar.{gz,bz2,lzma} file and won't unexpectedly create "Format: 2.0"
     .dsc files.
 
+  [ Guillem Jover ]
+  * Add support for Package-Type in dpkg-name.
+
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
 
